# hrai-hospital-reception

./: .gitignore  README.md
hospital_reception/: README.md  REPORT.md  package.xml  setup.cfg  setup.py
hospital_reception/config/: nav2_params.yaml  slam_params.yaml
hospital_reception/data/: doctors.json  locations.json  patients.json
hospital_reception/hospital_reception/: intent_parser.py  interaction_node.py  knowledge_base.py  navigation_node.py  reasoning_node.py  tts.py
hospital_reception/launch/: demo.launch.py  reception.launch.py
hospital_reception/maps/: hospital_map.pgm  hospital_map.yaml
hospital_reception/scripts/: build_and_test.sh  record_hints.md  run_demo.py
hospital_reception/test/: test_intent_parser.py  test_knowledge_base.py
hospital_reception/worlds/: hospital.world
hospital_reception_interfaces/: CMakeLists.txt  package.xml
hospital_reception_interfaces/action/: GoToLocation.action
hospital_reception_interfaces/srv/: VisitorRequest.srv
