<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hospital_reception_interfaces</name>
  <version>1.0.0</version>
  <description>
    Custom ROS2 interfaces (service + action) for the HRAI TIAGo hospital
    reception robot. Kept in a separate ament_cmake package because ament_python
    packages cannot generate rosidl interfaces themselves.
  </description>
  <maintainer email="khanfaraz39767@gmail.com">HRAI Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- rosidl generation -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- action definitions pull in these standard message deps -->
  <depend>action_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
